--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="{{ "{{base}}/css/style.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "{{base}}/css/fontello.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "{{base}}/css/font-awesome.css" | prepend: site.baseurl }}">
-  
+
   <!-- for local -->
   <!-- <link rel="stylesheet" href="{{ "/css/foundation.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/fontello.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/font-awesome.css" | prepend: site.baseurl }}"> -->
 
-  <script src="{{ "{{base}}/javascripts/libs.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+  <script src="{{ "/javascripts/libs.js" | prepend: {{base}} }}" type="text/javascript"></script>
   <!-- <script src="{{ "/javascripts/libs.js" | prepend: site.baseurl }}" type="text/javascript"></script> -->
   <script>
     // terrificjs bootstrap
@@ -37,9 +37,9 @@
     })(Tc.$);
   </script>
   <link href="http://fonts.googleapis.com/css?family=Raleway:400,700,300" media="screen" rel="stylesheet" type="text/css" />
-  <script src="{{ "{{base}}/javascripts/masonry.pkgd.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-  <script src="{{ "{{base}}/javascripts/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-  <script src="{{ "{{base}}/javascripts/slick.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+  <script src="{{ "/javascripts/masonry.pkgd.js" | prepend: {{base}} }}" type="text/javascript"></script>
+  <script src="{{ "/javascripts/imagesloaded.pkgd.min.js" | prepend: {{base}} }}" type="text/javascript"></script>
+  <script src="{{ "/javascripts/slick.min.js" | prepend: {{base}} }}" type="text/javascript"></script>
 
   <!-- <script src="{{ "/javascripts/masonry.pkgd.js" | prepend: site.baseurl }}" type="text/javascript"></script>
   <script src="{{ "/javascripts/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
