--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,20 +6,20 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <!-- for deployment -->
-  {% include base.html %}
+  <!-- {% include base.html %}
   <link rel="stylesheet" href="{{ "{{base}}/css/foundation.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "{{base}}/css/style.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "{{base}}/css/fontello.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "{{base}}/css/font-awesome.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "{{base}}/css/font-awesome.css" | prepend: site.baseurl }}"> -->
 
   <!-- for local -->
-  <!-- <link rel="stylesheet" href="{{ "/css/foundation.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/foundation.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/fontello.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/font-awesome.css" | prepend: site.baseurl }}"> -->
+  <link rel="stylesheet" href="{{ "/css/font-awesome.css" | prepend: site.baseurl }}">
 
-  <script src="{{ "/javascripts/libs.js" | prepend: {{base}} }}" type="text/javascript"></script>
-  <!-- <script src="{{ "/javascripts/libs.js" | prepend: site.baseurl }}" type="text/javascript"></script> -->
+  <!-- <script src="{{ "/javascripts/libs.js" | prepend: {{base}} }}" type="text/javascript"></script> -->
+  <script src="{{ "/javascripts/libs.js" | prepend: site.baseurl }}" type="text/javascript"></script>
   <script>
     // terrificjs bootstrap
     (function($) {
@@ -37,13 +37,13 @@
     })(Tc.$);
   </script>
   <link href="http://fonts.googleapis.com/css?family=Raleway:400,700,300" media="screen" rel="stylesheet" type="text/css" />
-  <script src="{{ "/javascripts/masonry.pkgd.js" | prepend: {{base}} }}" type="text/javascript"></script>
+  <!-- <script src="{{ "/javascripts/masonry.pkgd.js" | prepend: {{base}} }}" type="text/javascript"></script>
   <script src="{{ "/javascripts/imagesloaded.pkgd.min.js" | prepend: {{base}} }}" type="text/javascript"></script>
-  <script src="{{ "/javascripts/slick.min.js" | prepend: {{base}} }}" type="text/javascript"></script>
+  <script src="{{ "/javascripts/slick.min.js" | prepend: {{base}} }}" type="text/javascript"></script> -->
 
-  <!-- <script src="{{ "/javascripts/masonry.pkgd.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+  <script src="{{ "/javascripts/masonry.pkgd.js" | prepend: site.baseurl }}" type="text/javascript"></script>
   <script src="{{ "/javascripts/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-  <script src="{{ "/javascripts/slick.min.js" | prepend: site.baseurl }}" type="text/javascript"></script> -->
+  <script src="{{ "/javascripts/slick.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: {{base}} | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: {{base}} | prepend: site.url }}" />
