--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,11 +11,6 @@
       <li class='toggle-topbar menu-icon'>
         <a href='#'>Menu</a>
       </li>
-      <li class='toggle-topbar-icon menu-social-icon'>
-        <a href='https://www.instagram.com/henndogg_digital' target='_blank'>
-          <i class='fa fa-instagram'></i>
-        </a>
-      </li>
     </ul>
     <section class='top-bar-section'>
       <ul class='right'>
@@ -43,6 +38,11 @@
             </li>
           {% endif %}
         {% endfor %}
+        <li>
+          <a href='https://www.instagram.com/henndogg_digital/' target='_blank'>
+            <i class='fa fa-instagram'></i>
+          </a>
+        </li>
       </ul>
     </section>
   </nav>
